apps/actual-budget/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: actual-budget
  namespace: nori-cloud
spec:
  serviceName: actual-budget
  replicas: 1
  selector:
    matchLabels:
      app: actual-budget
  template:
    metadata:
      labels:
        app: actual-budget
    spec:
      containers:
        - name: actual-budget
          image: actualbudget/actual-server:latest
          ports:
            - containerPort: 5006
              name: http
          volumeMounts:
            - name: actual-data
              mountPath: /data
          resources:
            requests:
              memory: "128Mi"
              cpu: "50m"
            limits:
              memory: "512Mi"
              cpu: "250m"
  volumeClaimTemplates:
    - metadata:
        name: actual-data
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: freenas-nfs
        resources:
          requests:
            storage: 10Gi
