apps/actual-budget/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: actual-budget
  namespace: nori-cloud
  labels:
    app: actual-budget
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`actual-budget.norriswu.me`)
      kind: Rule
      services:
        - name: actual-budget
          port: 5006
